--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Cliente</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Repositório atraves do Vscode</h1>
+    <h1>Repositório através do Vscode</h1>
 </body>
 </html>
